Update settings, fix blog response structure, and enhance hero component layout

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["Farhad", "Zafari"]
+  "cSpell.words": ["Farhad", "Zafari"],
+  "postman.settings.dotenv-detection-notification-visibility": false
 }
